2010-07-20  Alan Modra  <amodra@gmail.com>

	* readelf.c (process_program_headers): Don't ignore all zero size
	sections.

2010-07-19  Andreas Schwab  <schwab@redhat.com>

	* readelf.c (process_section_headers): Update key to flags.

2010-07-17  Dave Korn  <dave.korn.cygwin@gmail.com>

	* objcopy.c (copy_usage): Tweak previous typofix.

2010-07-17  H.J. Lu  <hongjiu.lu@intel.com>

	* objcopy.c (copy_usage): Fix a typo.

2010-07-15  Kai Tietz <kai.tietz@onevision.com>

	* dllwrap.c (main): Make sure is_leading_underscore
	gets initialized with correct default.

2010-07-05  Alan Modra  <amodra@gmail.com>

	* readelf.c (uncompress_section_contents): Avoid gcc-4.6 warning.

2010-07-03  Cary Coutant  <ccoutant@google.com>

	* objdump.c (load_specific_debug_section): Decompress section contents
	before applying relocations.
	* readelf.c (load_specific_debug_section): Update section size after
	decompression.

2010-06-29  Alan Modra  <amodra@gmail.com>

   	PR binutils/3166
	* objcopy.c (is_strip_section): Revert 2006-09-05.
	(setup_section): Make SHT_GROUP section nobits.

2010-06-29  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.
	* po/POTFILES.in: Regenerate.

2010-06-27  Alan Modra  <amodra@gmail.com>

	* resbin.c (res_to_bin_accelerator): Delete set but unused variables.

2010-06-17  Nick Clifton  <nickc@redhat.com>

	PR binutils/11711
	* windres.c (enum option_values): New enum.
	(long_options): Use separate option number for --include-dir
	option.
	(main): Separate backwards compatibility check from code to
	implement --include-dir.  Check to see if directory exists and do
	not complain if it does.

2010-06-15  Joseph Myers  <joseph@codesourcery.com>

	* readelf.c (display_tic6x_attribute, process_tic6x_specific):
	New.
	(process_arch_specific): Call process_tic6x_specific for
	EM_TI_C6000.

2010-06-11  H.J. Lu  <hongjiu.lu@intel.com>

	* readelf.c (dump_ia64_vms_dynamic_fixups): Cast to unsigned long
	for 0x%lx.
